--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
     "@types/react": "18.2.11",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "dayjs": "^1.11.9",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^3.1.2",
+    "lucide-react": "^0.242.0",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
@@ -24,6 +29,8 @@
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
+    "@tailwindcss/forms": "^0.5.3",
+    "@types/js-cookie": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.3.0"
   }
 }
